force-app/main/default/objects/CampaignMember/fields/CampaignMemberEdit__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberEdit__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; &amp; Id &amp; &#39;/e?retURL=%2F00O7F00000AnzMiUAJ&#39;, &#39;編集&#39;,&#39;_self&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>編集</label>
    <type>Text</type>
</CustomField>