force-app/main/default/objects/CampaignMember/fields/Inquiry_YorN__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_YorN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>問い合わせがあったか、なかったか。あればチェック。</inlineHelpText>
    <label>問い合わせ</label>
    <type>Checkbox</type>
</CustomField>