force-app/main/default/objects/CampaignMember/fields/ResponseDetails__c.field-meta.xml
<CustomField>
    <fullName>ResponseDetails__c</fullName>
    <label>対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>価格等案内</fullName>
            </value>
            <value>
                <fullName>フォローメール送付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>